# fm-ros2

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  external.repos  fm-ros2.repos  install.ps1  install.sh  lib.sh  pixi.toml  run.ps1  run.sh
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  repo-hygiene.yml
docker/: Dockerfile.base  compose.linux.yaml  compose.macos.yaml  compose.yaml  ros_entrypoint.sh
docs/: ARCHITECTURE.md  CARVE-RECIPE.md  CI.md  EXTERNALS.md  FOXGLOVE.md  NATIVE_MUJOCO.md  POLYREPO.md  POLYREPO_ORIENTATION.html  README.md  REALSENSE.md  RUN.md  SETUP.md  SO101_MUJOCO_FOXGLOVE_LOCAL.md  run.md  setup-macos.md
docs/diagrams/: README.md  context.d2  deployment.d2  learning.d2  menu.d2  packages.d2  repomap.d2  run.d2  setup.d2  system.d2
fm_app/: README.md
fm_app/fm_app/: CMakeLists.txt  README.md  package.xml
fm_app/fm_bringup/: setup.cfg
fm_bringup/: README.md  package.xml
fm_bringup/fm_bringup/: registry.py
fm_bringup/launch/: bringup.launch.py  controllers.launch.py  servo.launch.py  teleop.launch.py
fm_bringup/test/: test_registry.py
fm_control/: CMakeLists.txt  README.md
fm_control/src/: control_node.cpp  g1_base_teleop.cpp
fm_control/urdf/: g1.ros2_control.xacro  g1.sim.urdf.xacro  so101.ros2_control.xacro
fm_data/: README.md
fm_data/fm_data_dataset/: README.md  package.xml  setup.py
fm_data/fm_data_record/: README.md
fm_description/: README.md  package.xml
fm_learning/: README.md
fm_learning/fm_data/: CMakeLists.txt  README.md  package.xml
fm_learning/fm_data/fm_data_dataset/: README.md  setup.cfg
fm_learning/fm_data/fm_data_record/: package.xml  setup.cfg  setup.py
fm_learning/fm_data/fm_data_record/fm_data_record/: recorder.py
fm_learning/fm_data/fm_data_record/test/: test_import.py
fm_learning/fm_learning/: CMakeLists.txt  README.md  package.xml
fm_learning/fm_policy/: README.md  package.xml
fm_learning/fm_policy/fm_policy_serve/: README.md  package.xml  setup.cfg  setup.py
fm_learning/fm_policy/fm_policy_serve/fm_policy_serve/: server.py
fm_learning/fm_policy/fm_policy_train/: README.md  package.xml  setup.cfg  setup.py
fm_learning/fm_policy/fm_policy_train/fm_policy_train/: trainer.py
fm_orchestration/: README.md  package.xml  setup.py
fm_orchestration/fm_orchestration/: orchestrator.py
fm_policy/: CMakeLists.txt  README.md
fm_policy/fm_policy_serve/: README.md
fm_policy/fm_policy_train/: README.md
fm_robot/: README.md
fm_robot/fm_description/: CMakeLists.txt
fm_robot/fm_description/foxglove/: g1_view.json
fm_robot/fm_description/launch/: view_robot.launch.py
fm_robot/fm_description/scripts/: convert_openarm_visual_meshes.py
fm_robot/fm_robot/: CMakeLists.txt  README.md  package.xml
fm_robot/fm_sensors/: package.xml  setup.cfg
fm_ros2/: CMakeLists.txt  README.md  package.xml
fm_sensors/: README.md  setup.py
fm_sensors/fm_sensors/: sensor_node.py
fm_tui/: README.md  setup.cfg  setup.py
fm_vlta/: README.md  package.xml
fm_vlta/fm_vlta_dataset/: package.xml  setup.cfg
fm_vlta/fm_vlta_record/: README.md  package.xml  setup.cfg  setup.py
fm_vlta/fm_vlta_serve/: setup.py
fm_vlta/fm_vlta_train/: package.xml  setup.cfg  setup.py
foxglove_teleop/: README.md  package.json
foxglove_teleop/src/: index.tsx
scripts/: carve-repo.sh  ci-smoke-macos.sh  ci-smoke.sh  ensure-docker.sh  foxglove.sh  import-externals.sh  install-foxglove.sh  install-orbstack.sh  mac_camera_bridge.py  setup-branch-protection.sh  setup-lerobot.sh  setup-linux.sh  setup-macos.sh  sim.sh  smoke.sh  teleop.sh  update-packages.sh  update.sh  verify-build.sh  view-g1.sh  view-openarm.sh  view-robot.sh  view-so101.sh
scripts/ci/: ci-smoke-macos.sh  ci-smoke.sh  native-dispatch.sh  native-launch.sh  smoke.sh  verify-build.sh
scripts/dev/: carve-paths.py  carve-repo.sh  setup-branch-protection.sh  update-packages.sh
scripts/install/: import-externals.sh  install-avahi-advert.sh  install-foxglove.sh  install-processor-service.sh  install-recorder-service.sh  install-socat.sh  install-sync-timer.sh  install-update-timer.sh  link-typesupport-macos.sh  native.sh  patch-mujoco-macos.sh  patch-ros2-control-macos.sh  setup-lerobot.sh  setup-linux.sh  setup-macos.sh  setup-processor.sh  setup-qwen.sh  setup-recorder.sh
scripts/install/shims/mujoco_vendor/: CMakeLists.txt  package.xml
scripts/run/: app.sh  appliance-update.sh  camera-bridge.sh  container.sh  dds-lan.sh  desktop.sh  foxglove.sh  lib-buildtree.sh  mac_camera_bridge.py  native-build.sh  native.sh  processor-boot.sh  recorder-boot.sh  recordings-sync.sh  rviz-vnc.sh  sim.sh  teleop.sh  view-robot.sh
src/fm-tui/: README.md  package.xml  setup.py
src/fm_bringup/: README.md  package.xml  setup.py
src/fm_bringup/config/g1_d/: g1_d.controllers.yaml  g1_d.srdf  joint_limits.yaml  kinematics.yaml  servo.yaml
src/fm_bringup/config/openarm/: default_bimanual.controllers.yaml  right_arm.controllers.yaml  servo.yaml
src/fm_bringup/config/so101/: joint_limits.yaml  servo.yaml
src/fm_bringup/fm_bringup/: g1_hand_teleop.py  joy_to_servo.py  registry.py  spacenav_to_servo.py
src/fm_bringup/launch/: servo.launch.py  sim.launch.py  teleop.launch.py
src/fm_bringup/test/: test_hand_presets.py  test_registry.py
src/fm_control/: CMakeLists.txt  README.md  package.xml
src/fm_control/include/fm_control/: g1_arm_sdk_bridge.hpp  g1_base_teleop.hpp
src/fm_control/src/: control_node.cpp  g1_arm_sdk_bridge.cpp  g1_base_teleop.cpp  g1_hand_sdk_bridge.cpp
src/fm_control/test/: test_g1_arm_sdk_bridge.cpp  test_g1_base_teleop.cpp  test_g1_hand_sdk_bridge.cpp
src/fm_control/urdf/: g1.ros2_control.xacro  g1.sim.urdf.xacro  openarm.ros2_control.xacro  openarm.sim.urdf.xacro  so101.sim.urdf.xacro
src/fm_description/: CMakeLists.txt  README.md  package.xml
src/fm_description/launch/: view_g1.launch.py  view_openarm.launch.py  view_robot.launch.py  view_so101.launch.py
src/fm_description/scripts/: convert_openarm_visual_meshes.py
src/fm_description/urdf/: fm_robot.urdf.xacro
(+121 files in other folders)
