<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fm_ros2</name>
  <version>0.0.0</version>
  <description>First Motive ROS2 workspace metapackage: depends on every fm_* package so the whole stack builds and installs as one unit</description>
  <maintainer email="nish@ubundi.co.za">First Motive</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Group metapackages — each pulls its own sub-packages transitively.
       fm_learning (with its fm_data + fm_policy sub-packages) is private and
       lives in the fm-learning.repos overlay, not this public manifest. colcon
       still builds it when the overlay is imported into src/; the dep is left
       out here so the public workspace resolves with only the four public
       groups. See docs/ARCHITECTURE.md. -->
  <exec_depend>fm_robot</exec_depend>
  <exec_depend>fm_app</exec_depend>
  <exec_depend>fm_sim</exec_depend>
  <exec_depend>fm_teleop</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
