<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fm_policy</name>
  <version>0.0.0</version>
  <description>First Motive policy layer: metapackage grouping model training and inference serving, model-agnostic (split-ready)</description>
  <maintainer email="nish@ubundi.co.za">First Motive</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>fm_policy_train</exec_depend>
  <exec_depend>fm_policy_serve</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
