<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fm_bringup</name>
  <version>0.0.0</version>
  <description>First Motive bringup: launch files and runtime configs</description>
  <maintainer email="nish@ubundi.co.za">First Motive</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <!-- registry.py processes the backend-selectable xacro into robot_description. -->
  <exec_depend>xacro</exec_depend>
  <!-- Fills unactuated joints for subset-controlled robots (the G1-D arm). -->
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>
  <exec_depend>fm_control</exec_depend>
  <exec_depend>fm_orchestration</exec_depend>

  <!-- ros2_control runtime: controller_manager + the controllers the bringup spawns. -->
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>forward_command_controller</exec_depend>
  <!-- G1-D wheeled base. -->
  <exec_depend>diff_drive_controller</exec_depend>

  <!-- Sim backends that host their own controller_manager. -->
  <exec_depend>mujoco_ros2_control</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <!-- Interactive teleop: MoveIt Servo + the vendored OpenArm MoveIt config. -->
  <exec_depend>moveit_servo</exec_depend>
  <exec_depend>openarm_bimanual_moveit_config</exec_depend>

  <!-- Teleop sources live in fm_teleop_device; teleop.launch.py spawns them and the
       gamepad/SpaceMouse driver nodes (joy_node, spacenav_node). -->
  <exec_depend>fm_teleop_device</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>spacenav</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
