<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fm_control</name>
  <version>0.0.0</version>
  <description>First Motive control: ros2_control hardware interfaces</description>
  <maintainer email="nish@ubundi.co.za">First Motive</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <!-- Description + xacro for the backend-selectable ros2_control system. -->
  <exec_depend>xacro</exec_depend>
  <exec_depend>openarm_description</exec_depend>

  <!-- ros2_control runtime + the System plugins each sim backend selects. -->
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>mujoco_ros2_control</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>topic_based_ros2_control</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
